<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="MachineStatus" Id="{3998cd04-c7d5-4ec3-a18a-2e56a1060e8b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE MachineStatus:
(
	
UNKNOWN := 0, (* Unknown status. *)
STOPPED := 1, (* Machine is stopped. *)
RESETTING := 2, (* Machine is resetting. *)
READY := 3, (* Machine is ready to be started. *)
INITIALIZING := 4, (* Machine is during the transition from Ready to
Running. *)
RUNNING := 5, (* Machine is currently in normal operation. *)
STOPPING := 6, (* Machine is coming to a stop. *)
ERROR := 7 (* Machine is in an error state and requires human
intervention. *)
	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>