<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="PerturbToteParams" Id="{97f7dfca-1c3c-41d1-8410-ca45f5cadf78}">
    <Declaration><![CDATA[{attribute 'pack_mode':='1'}
TYPE PerturbToteParams :
STRUCT
   target_id: ModelIdentifier;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>